--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </title>
 </head>
 </body>
-<h1>mi señorita.</h1>
+<h1>mi se&ntilde;orita.</h1>
 <img src="images.jpg">
-<p>mi niña bonita.</p>
+<p>mi ni&ntilde;a bonita.</p>
 <p id="special">te kiero bien arto chaparra.</p>
 </body>
 </html>
